[gd_scene load_steps=12 format=3 uid="uid://dr5kvvsn8nu1m"]

[ext_resource type="Texture2D" uid="uid://docua86hjwgfi" path="res://Entities/Enemies/assets/enemy.png" id="1_3a0iv"]
[ext_resource type="Script" path="res://Entities/Enemies/Enemy.gd" id="1_gorbn"]
[ext_resource type="PackedScene" uid="uid://bnpwqmpl41w12" path="res://Entities/Components/Hitbox Component/hitbox_component.tscn" id="3_2o7bk"]
[ext_resource type="PackedScene" uid="uid://bpx7kfuma3nst" path="res://Entities/Components/Health Component/health_component.tscn" id="3_trr2u"]
[ext_resource type="PackedScene" uid="uid://pf5g0why7nwj" path="res://Entities/Components/Attack Component/attack_component.tscn" id="5_nh7b1"]
[ext_resource type="Script" path="res://Entities/StateMachine/StateMachine.gd" id="6_bno08"]
[ext_resource type="Script" path="res://Entities/StateMachine/BeeingPushedFromPoint.gd" id="7_jcv70"]
[ext_resource type="Script" path="res://Entities/StateMachine/State.gd" id="7_p7gb6"]
[ext_resource type="Script" path="res://Debug/label_debug_charge.gd" id="9_gloul"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8qfd7"]
radius = 11.4018

[sub_resource type="CircleShape2D" id="CircleShape2D_nfp1p"]
radius = 22.561

[node name="EnemyBasic" type="CharacterBody2D"]
process_mode = 1
collision_layer = 2
collision_mask = 15
script = ExtResource("1_gorbn")
SPEED = 120.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_3a0iv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8qfd7")

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_2o7bk")]
collision_layer = 32
collision_mask = 32
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
modulate = Color(1, 0.360784, 0.2, 1)
shape = SubResource("CircleShape2D_nfp1p")

[node name="HealthComponent" parent="." instance=ExtResource("3_trr2u")]
MAX_HEALTH = 90

[node name="AttackComponent" parent="." instance=ExtResource("5_nh7b1")]

[node name="StateMachine" type="Node2D" parent="." node_paths=PackedStringArray("moving_entity", "initial_state", "default_state")]
script = ExtResource("6_bno08")
moving_entity = NodePath("..")
initial_state = NodePath("State")
default_state = NodePath("State")

[node name="State" type="Node2D" parent="StateMachine"]
script = ExtResource("7_p7gb6")

[node name="BeeingPushedFromPoint" type="Node2D" parent="StateMachine"]
script = ExtResource("7_jcv70")

[node name="Label" type="Label" parent="."]
offset_left = -50.0
offset_top = 23.0
offset_right = 50.0
offset_bottom = 46.0
text = "ici"
script = ExtResource("9_gloul")

[connection signal="area_entered" from="HitboxComponent" to="." method="_on_hitbox_component_area_entered"]
